test/fail/id/paramlocal.java
class Test {
    public int test(int x) {
        int x = 3;
    }
}
